--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,1 +1,5 @@
 
+deployment:
+  tasks:
+    - export DEPLOYPATH=/home/root/public_html/crud_api #Add /<sub_folder> if required
+    - /bin/cp -r * $DEPLOYPATH
